[gd_scene load_steps=15 format=3 uid="uid://bi2gn1ehippgw"]

[ext_resource type="Script" path="res://games/polarbears/scenes/objects/scripts/patrol.gd" id="1_2qdmn"]
[ext_resource type="Texture2D" uid="uid://lo7cvlwvgn1t" path="res://games/polarbears/assets/gfx/patrol_64x64.png" id="1_ajrw0"]
[ext_resource type="Texture2D" uid="uid://b50s4sbkb7io7" path="res://games/polarbears/assets/gfx/gore_16x16.png" id="3_nrdxt"]
[ext_resource type="AudioStream" uid="uid://xh8af5m2bved" path="res://games/polarbears/assets/sounds/splat.tres" id="4_ef811"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yynjq"]
atlas = ExtResource("1_ajrw0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aakyj"]
atlas = ExtResource("1_ajrw0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnf43"]
atlas = ExtResource("1_ajrw0")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnw6q"]
atlas = ExtResource("1_ajrw0")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ualm"]
atlas = ExtResource("1_ajrw0")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oof0m"]
atlas = ExtResource("1_ajrw0")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dkur"]
atlas = ExtResource("1_ajrw0")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_biouy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yynjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aakyj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnf43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnw6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ualm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oof0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dkur")
}],
"loop": false,
"name": &"die",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8u7qh"]
size = Vector2(64, 64)

[sub_resource type="Gradient" id="Gradient_qv62v"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Patrol" type="Area2D" groups=["enemy"]]
script = ExtResource("1_2qdmn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_biouy")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8u7qh")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
local_coords = true
texture = ExtResource("3_nrdxt")
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 200.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
color_ramp = SubResource("Gradient_qv62v")

[node name="SplatSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ef811")

[connection signal="off_screen" from="." to="." method="_on_off_screen"]
[connection signal="on_screen" from="." to="." method="_on_on_screen"]
